Math oriented containers no longer hold their size, as it is now passed as a function argument. in debug mode, the size is held for debugging and assertion puproses

--- a/MultiEngine.vcxproj.filters
+++ b/MultiEngine.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClInclude Include="general.h">
       <Filter>Source Files\util</Filter>
     </ClInclude>
+    <ClInclude Include="predefs.h">
+      <Filter>Source Files\predefs</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="win_main.cc">
