--- a/MultiEngine.vcxproj
+++ b/MultiEngine.vcxproj
@@ -129,6 +129,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -147,6 +148,7 @@
     <ClInclude Include="lu_decomposition.h" />
     <ClInclude Include="matrix.h" />
     <ClInclude Include="message.h" />
+    <ClInclude Include="predefs.h" />
     <ClInclude Include="strings.h" />
     <ClInclude Include="vector.h" />
     <ClInclude Include="win_main.h" />
