--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,6 @@ ADD_SUBDIRECTORY(${SOURCE_PATH})
 ADD_SUBDIRECTORY(${MAIN_PATH})
 ADD_SUBDIRECTORY(${TEST_PATH})
 
+ENABLE_TESTING()
+ADD_TEST(NrasterTests NrasterTest)
+
