added cmake testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
 
 project(Nraster CXX)
 
+IF(NOT CMAKE_BUILD_TYPE)
+	SET(CMAKE_BUILD_TYPE Debug)
+ENDIF()
+
 SET(INCLUDE_PATH ${PROJECT_SOURCE_DIR}/include)
 SET(SOURCE_PATH ${PROJECT_SOURCE_DIR}/src)
 SET(MAIN_PATH ${PROJECT_SOURCE_DIR}/main)
@@ -12,5 +16,9 @@ ADD_SUBDIRECTORY(${MAIN_PATH})
 ADD_SUBDIRECTORY(${TEST_PATH})
 
 ENABLE_TESTING()
-ADD_TEST(NrasterTests NrasterTest)
+
+ADD_TEST(
+	NAME NrasterTests
+	COMMAND $<TARGET_FILE:NrasterTest>
+)
 
