removed cmake configuration testing; began vulkan tutorial

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,14 +11,21 @@ SET(SOURCE_PATH ${PROJECT_SOURCE_DIR}/src)
 SET(MAIN_PATH ${PROJECT_SOURCE_DIR}/main)
 SET(TEST_PATH ${PROJECT_SOURCE_DIR}/test)
 
+FIND_PACKAGE(Vulkan REQUIRED)
+FIND_PACKAGE(glfw3 3.2 REQUIRED)
+FIND_PACKAGE(glm REQUIRED)
+
+INCLUDE_DIRECTORIES(${Vulkan_INCLUDE_DIRS} ${glfw3_INCLUDE_DIR} ${glm_INCLUDE_DIR} ${INCLUDE_PATH})
+LINK_LIBRARIES(${Vulkan_LIBRARIES} glfw glm)
+
 ADD_SUBDIRECTORY(${SOURCE_PATH})
 ADD_SUBDIRECTORY(${MAIN_PATH})
 ADD_SUBDIRECTORY(${TEST_PATH})
 
 ENABLE_TESTING()
 
-ADD_TEST(
-	NAME NrasterTests
-	COMMAND $<TARGET_FILE:NrasterTest>
-)
+#ADD_TEST(
+#	NAME NrasterTests
+#	COMMAND $<TARGET_FILE:NrasterTest>
+#)
 
