--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
 
-ADD_LIBRARY(Nraster SHARED mul.cpp)
-TARGET_INCLUDE_DIRECTORIES(Nraster PUBLIC ${INCLUDE_PATH})
+#ADD_LIBRARY(Nraster SHARED mul.cpp)
+#TARGET_INCLUDE_DIRECTORIES(Nraster PUBLIC ${INCLUDE_PATH})
