--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,11 @@ SET(SOURCE_PATH ${PROJECT_SOURCE_DIR}/src)
 SET(MAIN_PATH ${PROJECT_SOURCE_DIR}/main)
 SET(TEST_PATH ${PROJECT_SOURCE_DIR}/test)
 
-FIND_PACKAGE(Vulkan REQUIRED)
+FIND_PACKAGE(OpenGL)
 FIND_PACKAGE(glfw3 3.2 REQUIRED)
-FIND_PACKAGE(glm REQUIRED)
 
-INCLUDE_DIRECTORIES(${Vulkan_INCLUDE_DIRS} ${glfw3_INCLUDE_DIR} ${glm_INCLUDE_DIR} ${INCLUDE_PATH})
-LINK_LIBRARIES(${Vulkan_LIBRARIES} glfw glm)
+INCLUDE_DIRECTORIES(${OpenGL_INCLUDE_DIRS} ${INCLUDE_PATH})
+LINK_LIBRARIES(${OpenGL_LIBRARIES})
 
 ADD_SUBDIRECTORY(${SOURCE_PATH})
 ADD_SUBDIRECTORY(${MAIN_PATH})
