--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,4 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
 
-ADD_EXECUTABLE(NrasterDemo main.cpp)
-TARGET_INCLUDE_DIRECTORIES(NrasterDemo PUBLIC ${INCLUDE_PATH})
-#TARGET_LINK_LIBRARIES(NrasterDemo PUBLIC Nraster)
+ADD_EXECUTABLE(NrasterDemo .)
+TARGET_LINK_LIBRARIES(NrasterDemo PUBLIC Nraster PUBLIC glfw)
