--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,4 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
 
-#ADD_EXECUTABLE(NrasterTest multest.cpp)
-#TARGET_INCLUDE_DIRECTORIES(NrasterTest PUBLIC ${INCLUDE_PATH})
-#TARGET_LINK_LIBRARIES(NrasterTest PUBLIC Nraster)
+ADD_EXECUTABLE(NrasterTest .)
+TARGET_LINK_LIBRARIES(NrasterTest PUBLIC Nraster)
