added gtest submodule; created the framework for v0.7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,25 +6,27 @@ IF(NOT CMAKE_BUILD_TYPE)
 	SET(CMAKE_BUILD_TYPE Debug)
 ENDIF()
 
-SET(INCLUDE_PATH ${PROJECT_SOURCE_DIR}/include)
-SET(SOURCE_PATH ${PROJECT_SOURCE_DIR}/src)
-SET(MAIN_PATH ${PROJECT_SOURCE_DIR}/main)
-SET(TEST_PATH ${PROJECT_SOURCE_DIR}/test)
+OPTION(BUILD_TESTS "builds the test directory and gtest")
+OPTION(BUILD_DEMOS "builds the demo directory")
 
-FIND_PACKAGE(OpenGL)
-FIND_PACKAGE(glfw3 3.2 REQUIRED)
+FIND_PACKAGE(OpenGL REQUIRED)
+FIND_PACKAGE(GLEW REQUIRED)
 
-INCLUDE_DIRECTORIES(${OpenGL_INCLUDE_DIRS} ${INCLUDE_PATH})
-LINK_LIBRARIES(${OpenGL_LIBRARIES})
+ADD_SUBDIRECTORY(dependencies)
+ADD_SUBDIRECTORY(lib)
 
-ADD_SUBDIRECTORY(${SOURCE_PATH})
-ADD_SUBDIRECTORY(${MAIN_PATH})
-ADD_SUBDIRECTORY(${TEST_PATH})
+IF(BUILD_DEMOS)
+	ADD_SUBDIRECTORY(demo)
+ENDIF()
 
-ENABLE_TESTING()
+IF(BUILD_TESTS)
+	ADD_SUBDIRECTORY(test)
 
-#ADD_TEST(
-#	NAME NrasterTests
-#	COMMAND $<TARGET_FILE:NrasterTest>
-#)
+	ENABLE_TESTING()
+
+	ADD_TEST(
+		NAME NrasterTests
+		COMMAND $<TARGET_FILE:NrasterTest>
+	)
+ENDIF()
 
