--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,12 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
 
 ADD_EXECUTABLE(NrasterTest .)
-TARGET_LINK_LIBRARIES(NrasterTest PUBLIC Nraster)
+
+TARGET_LINK_LIBRARIES(NrasterTest 
+	PRIVATE Nraster
+	PRIVATE gtest 
+	PRIVATE gtest_main)
+
+TARGET_INCLUDE_DIRECTORIES(NrasterTest 
+	PRIVATE ${NRASTER_INCLUDE_DIRS}
+	PRIVATE ${gtest_SOURCE_DIR}/include)
