--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
 
-ADD_LIBRARY(Nraster SHARED src/DrawObject.cpp)
+ADD_LIBRARY(Nraster SHARED src/rendering/Render.cpp)
 
 TARGET_LINK_LIBRARIES(Nraster
 	PRIVATE ${OPENGL_LIBRARIES}
@@ -9,7 +9,7 @@ TARGET_LINK_LIBRARIES(Nraster
 TARGET_INCLUDE_DIRECTORIES(Nraster
 	PRIVATE ${OPENGL_INCLUDE_DIRS}
 	PRIVATE ${GLEW_INCLUDE_DIRS}
-	INTERFACE inc/)
+	INTERFACE inc)
 
 SET(NRASTER_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/inc/)
 
