--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,11 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
 
-ADD_EXECUTABLE(NrasterTest .)
+ADD_EXECUTABLE(NrasterTest tests.cpp)
 
 TARGET_LINK_LIBRARIES(NrasterTest 
 	PRIVATE Nraster
 	PRIVATE gtest 
-	PRIVATE gtest_main)
+	PRIVATE gmock)
 
 TARGET_INCLUDE_DIRECTORIES(NrasterTest 
 	PRIVATE ${NRASTER_INCLUDE_DIRS}
