--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 
-ADD_EXECUTABLE(NrasterTest tests.cpp)
+ADD_EXECUTABLE(NrasterTest includes.h unify_buffers_tests.h tests.cpp)
 
 TARGET_LINK_LIBRARIES(NrasterTest 
 	PRIVATE Nraster
@@ -8,5 +8,5 @@ TARGET_LINK_LIBRARIES(NrasterTest
 	PRIVATE gmock)
 
 TARGET_INCLUDE_DIRECTORIES(NrasterTest 
-	PRIVATE ${NRASTER_INCLUDE_DIRS}
+	PRIVATE ${NRASTER_ALL_INCLUDES}
 	PRIVATE ${gtest_SOURCE_DIR}/include)
