--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,4 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 
 ADD_LIBRARY(Nraster SHARED src/rendering/Render.cpp)
 
@@ -9,7 +9,7 @@ TARGET_LINK_LIBRARIES(Nraster
 TARGET_INCLUDE_DIRECTORIES(Nraster
 	PRIVATE ${OPENGL_INCLUDE_DIRS}
 	PRIVATE ${GLEW_INCLUDE_DIRS}
-	INTERFACE inc)
+	PRIVATE ${PROJECT_SOURCE_DIR}/lib/inc)
 
-SET(NRASTER_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/inc/)
+SET(NRASTER_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/lib/inc/public/)
 
