working glfw demo has been added; not converted to testing Nraster yet

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,6 +1,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 
-ADD_EXECUTABLE(NrasterDemo .)
+FILE(COPY src/shaders/ DESTINATION shaders)
+
+ADD_EXECUTABLE(NrasterDemo src/main.cpp)
 
 TARGET_LINK_LIBRARIES(NrasterDemo 
 	PRIVATE ${OPENGL_LIBRARIES}
@@ -12,4 +14,5 @@ TARGET_INCLUDE_DIRECTORIES(NrasterDemo
 	PRIVATE ${OPENGL_INCLUDE_DIRS}
 	PRIVATE ${GLEW_INCLUDE_DIRS}
 	PRIVATE ${GLFW_INCLUDE_DIRS}
+	PUBLIC inc
 	PUBLIC ${NRASTER_INCLUDE_DIRS})
