--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 
-ADD_LIBRARY(Nraster SHARED src/rendering/Render.cpp)
+ADD_LIBRARY(Nraster SHARED src/rendering/Render.cpp src/rendering/RenderData.cpp)
 
 TARGET_LINK_LIBRARIES(Nraster
 	PRIVATE ${OPENGL_LIBRARIES}
@@ -11,5 +11,5 @@ TARGET_INCLUDE_DIRECTORIES(Nraster
 	PRIVATE ${GLEW_INCLUDE_DIRS}
 	PRIVATE ${PROJECT_SOURCE_DIR}/lib/inc)
 
-SET(NRASTER_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/lib/inc/public/)
+SET(NRASTER_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/lib/public/)
 
