fixed redefinitions :); demo can now compile

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -15,4 +15,5 @@ TARGET_INCLUDE_DIRECTORIES(NrasterDemo
 	PRIVATE ${GLEW_INCLUDE_DIRS}
 	PRIVATE ${GLFW_INCLUDE_DIRS}
 	PUBLIC inc
-	PUBLIC ${NRASTER_INCLUDE_DIRS})
+	PRIVATE ${NRASTER_INCLUDE_DIRS})
+
