--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -1,6 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 
 IF (BUILD_TESTS)
-	ADD_SUBDIRECTORY(gtest)
+	IF (FIND_GTEST)
+		FIND_PACKAGE(GTest REQUIRED)
+	ELSE()
+		ADD_SUBDIRECTORY(gtest)
+	ENDIF()
 ENDIF()
 
