--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -14,6 +14,6 @@ TARGET_INCLUDE_DIRECTORIES(NrasterDemo
 	PRIVATE ${OPENGL_INCLUDE_DIRS}
 	PRIVATE ${GLEW_INCLUDE_DIRS}
 	PRIVATE ${GLFW_INCLUDE_DIRS}
-	PUBLIC inc
+	PRIVATE inc
 	PRIVATE ${NRASTER_INCLUDE_DIRS})
 
