--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,19 +1,3 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 
-FILE(COPY src/shaders/ DESTINATION shaders)
-
-ADD_EXECUTABLE(NrasterDemo src/main.cpp)
-
-TARGET_LINK_LIBRARIES(NrasterDemo 
-	PRIVATE ${OPENGL_LIBRARIES}
-	PRIVATE Nraster 
-	PRIVATE glfw
-	PRIVATE ${GLEW_LIBRARIES})
-
-TARGET_INCLUDE_DIRECTORIES(NrasterDemo
-	PRIVATE ${OPENGL_INCLUDE_DIRS}
-	PRIVATE ${GLEW_INCLUDE_DIRS}
-	PRIVATE ${GLFW_INCLUDE_DIRS}
-	PRIVATE inc
-	PRIVATE ${NRASTER_INCLUDE_DIRS})
-
+ADD_SUBDIRECTORY(rest)
