demo cube4d draws 8 out of 16 points

--- a/demo/rest/CMakeLists.txt
+++ b/demo/rest/CMakeLists.txt
@@ -17,3 +17,4 @@ INCLUDE_DIRECTORIES(
 
 ADD_EXECUTABLE(triangle src/triangle.cpp)
 ADD_EXECUTABLE(cube src/cube.cpp)
+ADD_EXECUTABLE(cube4d src/multiD.cpp)
