began working on new version api using opencl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ OPTION(BUILD_DEMOS "builds the demo directory" OFF)
 OPTION(FIND_GTEST "find installed gtest instead of building it" OFF)
 
 FIND_PACKAGE(OpenGL REQUIRED)
+FIND_PACKAGE(OpenCL REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
 
 SET(CMAKE_CXX_STANDARD 17)
@@ -29,7 +30,7 @@ IF(BUILD_TESTS)
 	
 	ADD_SUBDIRECTORY(test)
 	ENABLE_TESTING()
-	ADD_TEST(NAME AllTests COMMAND NrasterTest) # run the executable itself for a better log
+	ADD_TEST(NAME AllTests COMMAND NrasterTest) # run the executable itself for a better log, as it uses GTest
 
 	UNSET(NRASTER_ALL_INCLUDES)
 ENDIF()
