--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -7,12 +7,15 @@ ADD_LIBRARY(Nraster SHARED
 
 TARGET_LINK_LIBRARIES(Nraster
 	PRIVATE ${OPENGL_LIBRARIES}
-	PRIVATE ${GLEW_LIBRARIES})
+	PRIVATE ${GLEW_LIBRARIES}
+	PRIVATE OpenCL::OpenCL)
 
 TARGET_INCLUDE_DIRECTORIES(Nraster
 	PRIVATE ${OPENGL_INCLUDE_DIRS}
 	PRIVATE ${GLEW_INCLUDE_DIRS}
+	PRIVATE ${OpenCL_INCLUDE_DIRS}
 	PRIVATE inc)
 
 SET(NRASTER_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/public CACHE INTERNAL "")
 
+FILE(COPY resources/ DESTINATION resources/)
