code now compiles well, no vtable errors FFS

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,8 +1,18 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 
+# main Nraster library
+
 ADD_LIBRARY(Nraster SHARED 
-	src/rendering/Render.cpp src/rendering/RenderData.cpp
-	src/utils/memory.cpp src/utils/converters.cpp
+	src/rendering/Render.cpp 
+	src/rendering/RenderData.cpp
+	
+	src/utils/memory.cpp
+	src/utils/converters.cpp
+	src/utils/files.cpp
+
+	src/pipeline/Stage.cpp
+	src/pipeline/Rasterizer.cpp
+
 	src/general/predefs.cpp)
 
 TARGET_LINK_LIBRARIES(Nraster
