--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,6 +11,7 @@ TARGET_LINK_LIBRARIES(NrasterTest
 TARGET_INCLUDE_DIRECTORIES(NrasterTest 
 	PRIVATE ${NRASTER_ALL_INCLUDES}
 	PRIVATE ${gtest_SOURCE_DIR}/include
+	PRIVATE ${gmock_SOURCE_DIR}/include
 	PRIVATE ${OpenCL_INCLUDE_DIRS})
 
 if(WIN32)
