reorganized testing dir

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,6 +9,7 @@ TARGET_LINK_LIBRARIES(NrasterTest
 	PRIVATE OpenCL::OpenCL)
 
 TARGET_INCLUDE_DIRECTORIES(NrasterTest 
+	PRIVATE .
 	PRIVATE ${NRASTER_ALL_INCLUDES}
 	PRIVATE ${gtest_SOURCE_DIR}/include
 	PRIVATE ${gmock_SOURCE_DIR}/include
