prepared for adding more complex demos

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -4,18 +4,16 @@ FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
 FIND_PACKAGE(glfw3 3.3 REQUIRED)
 
-ADD_EXECUTABLE(NrasterDemo
-	src/main.cpp
-	src/framework.cpp)
+ADD_LIBRARY(NrasterDemoUtils src/utils.cpp)
 
-TARGET_LINK_LIBRARIES(NrasterDemo 
+TARGET_LINK_LIBRARIES(NrasterDemoUtils 
 	PRIVATE Nraster
 	PRIVATE OpenCL::OpenCL
 	PRIVATE ${OPENGL_LIBRARIES}
 	PRIVATE glfw
 	PRIVATE ${GLEW_LIBRARIES})
 
-TARGET_INCLUDE_DIRECTORIES(NrasterDemo
+TARGET_INCLUDE_DIRECTORIES(NrasterDemoUtils
 	PRIVATE inc
 	PRIVATE ${NRASTER_ALL_INCLUDES}
 	PRIVATE ${OpenCL_INCLUDE_DIRS}
@@ -23,10 +21,31 @@ TARGET_INCLUDE_DIRECTORIES(NrasterDemo
 	PRIVATE ${GLEW_INCLUDE_DIRS}
 	PRIVATE ${GLFW_INCLUDE_DIRS})
 
+
+
+ADD_EXECUTABLE(Triangle3d src/triangle3d.cpp)
+
+TARGET_LINK_LIBRARIES(Triangle3d 
+	PRIVATE Nraster
+	PRIVATE OpenCL::OpenCL
+	PRIVATE ${OPENGL_LIBRARIES}
+	PRIVATE glfw
+	PRIVATE ${GLEW_LIBRARIES}
+	NrasterDemoUtils)
+
+TARGET_INCLUDE_DIRECTORIES(Triangle3d
+	PRIVATE inc
+	PRIVATE ${NRASTER_ALL_INCLUDES}
+	PRIVATE ${OpenCL_INCLUDE_DIRS}
+	PRIVATE ${OPENGL_INCLUDE_DIRS}
+	PRIVATE ${GLEW_INCLUDE_DIRS}
+	PRIVATE ${GLFW_INCLUDE_DIRS})
+
+
 if(WIN32)
     # Copy DLL files to output directory
-    add_custom_command(TARGET NrasterDemo POST_BUILD
+    add_custom_command(TARGET Triangle3d POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
     "${PROJECT_BINARY_DIR}/lib/Nraster.dll"             
-    $<TARGET_FILE_DIR:NrasterDemo>)
+    $<TARGET_FILE_DIR:Triangle3d>)
 endif()
