reordered demo's cmake file

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -4,42 +4,26 @@ FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
 FIND_PACKAGE(glfw3 3.3 REQUIRED)
 
+INCLUDE_DIRECTORIES(
+	PUBLIC inc
+	PUBLIC ${NRASTER_ALL_INCLUDES}
+	PUBLIC ${OpenCL_INCLUDE_DIRS}
+	PUBLIC ${OPENGL_INCLUDE_DIRS}
+	PUBLIC ${GLEW_INCLUDE_DIRS}
+	PUBLIC ${GLFW_INCLUDE_DIRS})
+
+
 ADD_LIBRARY(NrasterDemoUtils src/utils.cpp)
 
 TARGET_LINK_LIBRARIES(NrasterDemoUtils 
-	PRIVATE Nraster
-	PRIVATE OpenCL::OpenCL
-	PRIVATE ${OPENGL_LIBRARIES}
-	PRIVATE glfw
-	PRIVATE ${GLEW_LIBRARIES})
-
-TARGET_INCLUDE_DIRECTORIES(NrasterDemoUtils
-	PRIVATE inc
-	PRIVATE ${NRASTER_ALL_INCLUDES}
-	PRIVATE ${OpenCL_INCLUDE_DIRS}
-	PRIVATE ${OPENGL_INCLUDE_DIRS}
-	PRIVATE ${GLEW_INCLUDE_DIRS}
-	PRIVATE ${GLFW_INCLUDE_DIRS})
-
-
+	PUBLIC Nraster
+	PUBLIC OpenCL::OpenCL
+	PUBLIC ${OPENGL_LIBRARIES}
+	PUBLIC glfw
+	PUBLIC ${GLEW_LIBRARIES})
 
 ADD_EXECUTABLE(Triangle3d src/triangle3d.cpp)
-
-TARGET_LINK_LIBRARIES(Triangle3d 
-	PRIVATE Nraster
-	PRIVATE OpenCL::OpenCL
-	PRIVATE ${OPENGL_LIBRARIES}
-	PRIVATE glfw
-	PRIVATE ${GLEW_LIBRARIES}
-	NrasterDemoUtils)
-
-TARGET_INCLUDE_DIRECTORIES(Triangle3d
-	PRIVATE inc
-	PRIVATE ${NRASTER_ALL_INCLUDES}
-	PRIVATE ${OpenCL_INCLUDE_DIRS}
-	PRIVATE ${OPENGL_INCLUDE_DIRS}
-	PRIVATE ${GLEW_INCLUDE_DIRS}
-	PRIVATE ${GLFW_INCLUDE_DIRS})
+TARGET_LINK_LIBRARIES(Triangle3d NrasterDemoUtils)
 
 
 if(WIN32)
