--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -1,10 +1,13 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 
-IF (BUILD_TESTS)
-	IF (FIND_GTEST)
-		FIND_PACKAGE(GTest REQUIRED)
-	ELSE()
-		ADD_SUBDIRECTORY(gtest)
-	ENDIF()
+IF (BUILD_GTEST)
+	ADD_SUBDIRECTORY(googletest EXCLUDE_FROM_ALL)
 ENDIF()
 
+IF (BUILD_GLEW)
+	ADD_SUBDIRECTORY(glew)
+ENDIF()
+
+IF (FIND_GLFW)
+	ADD_SUBDIRECTORY(glfw)
+ENDIF()
