--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -6,8 +6,10 @@ ENDIF()
 
 IF (BUILD_GLEW)
 	ADD_SUBDIRECTORY(glew)
+	SET(GLFW_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/glfw/include")
 ENDIF()
 
 IF (FIND_GLFW)
 	ADD_SUBDIRECTORY(glfw)
+	SET(GLEW_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/glew/include"
 ENDIF()
