and it finally compiles.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,28 +9,49 @@ ENDIF()
 OPTION(BUILD_TESTS "builds the test directory and gtest" ON)
 OPTION(BUILD_DEMOS "builds the demo directory" ON)
 
-FIND_PACKAGE(OpenCL REQUIRED)
-
 SET(CMAKE_CXX_STANDARD 17)
 
-IF(WIN32)
-	SET(gtest_force_shared_crt ON)
-ENDIF(WIN32)
-
-ADD_SUBDIRECTORY(lib)
-
-SET(NRASTER_ALL_INCLUDES ${PROJECT_SOURCE_DIR}/lib/inc)
+#IF(WIN32)
+#	SET(gtest_force_shared_crt ON)
+#ENDIF(WIN32)
 
 IF(BUILD_DEMOS)
-	SET(BUILD_GLFW ON)
-	SET(BUILD_GLEW ON)
+	SET(BUILD_glew ON)
+	SET(BUILD_glfw ON)
+	SET(FIND_OpenGL ON)
 ENDIF()
 
-IF (BUILD_TESTS)
-	SET(BUILD_GTEST ON)
+IF(BUILD_TESTS)
+	SET(BUILD_gtest ON)
 ENDIF()
 
-ADD_SUBDIRECTORY(dependencies)
+FIND_PACKAGE(OpenCL REQUIRED)
+SET(OpenCL_INCLUDE_DIRS "${OpenCL_INCLUDE_DIRS}")
+
+IF (BUILD_gtest)
+	ADD_SUBDIRECTORY(dependencies/googletest EXCLUDE_FROM_ALL)
+	SET(gtest_INCLUDE_DIRS "${gtest_SOURCE_DIR}/include ${gmock_SOURCE_DIR}/include")
+ENDIF()
+
+IF (BUILD_glew)
+	ADD_SUBDIRECTORY(dependencies/glew)
+	SET(glfw_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/glfw/include")
+ENDIF()
+
+IF (BUILD_glfw)
+	ADD_SUBDIRECTORY(dependencies/glfw)
+	SET(glew_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/glew/include")
+	ADD_LIBRARY(glew ALIAS libglew_shared)
+ENDIF()
+
+IF (FIND_OpenGL)
+	FIND_PACKAGE(OpenGL REQUIRED)
+	SET(OpenGL_INCLUDE_DIRS "${OPENGL_INCLUDE_DIRS}")
+ENDIF()
+
+
+ADD_SUBDIRECTORY(lib)
+SET(NRASTER_ALL_INCLUDES ${PROJECT_SOURCE_DIR}/lib/inc)
 
 IF(BUILD_DEMOS)
 	ADD_SUBDIRECTORY(demo)
