--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,25 +1,21 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 
-FIND_PACKAGE(OpenGL REQUIRED)
-FIND_PACKAGE(GLEW REQUIRED)
-FIND_PACKAGE(glfw3 3.3 REQUIRED)
-
 INCLUDE_DIRECTORIES(
 	PUBLIC inc
 	PUBLIC ${NRASTER_ALL_INCLUDES}
 	PUBLIC ${OpenCL_INCLUDE_DIRS}
-	PUBLIC ${OPENGL_INCLUDE_DIRS}
-	PUBLIC ${GLEW_INCLUDE_DIRS}
-	PUBLIC ${GLFW_INCLUDE_DIRS})
+	PUBLIC ${OpenGL_INCLUDE_DIRS}
+	PUBLIC ${glew_INCLUDE_DIRS}
+	PUBLIC ${glfw_INCLUDE_DIRS})
 
 ADD_LIBRARY(NrasterDemoUtils src/utils.cpp src/linalg.cpp)
 
 TARGET_LINK_LIBRARIES(NrasterDemoUtils 
 	PUBLIC Nraster
-	PUBLIC OpenCL::OpenCL
-	PUBLIC opengl32
+	PUBLIC OpenCL
+	PUBLIC OpenGL
 	PUBLIC glfw
-	PUBLIC libglew_shared)
+	PUBLIC glew)
 
 ADD_EXECUTABLE(Triangle3d src/triangle3d.cpp)
 TARGET_LINK_LIBRARIES(Triangle3d NrasterDemoUtils)
