--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,13 +8,12 @@ TARGET_LINK_LIBRARIES(NrasterTest
 	PRIVATE Nraster
 	PRIVATE gtest 
 	PRIVATE gmock
-	PRIVATE OpenCL::OpenCL)
+	PRIVATE OpenCL)
 
 TARGET_INCLUDE_DIRECTORIES(NrasterTest 
 	PRIVATE .
 	PRIVATE ${NRASTER_ALL_INCLUDES}
-	PRIVATE ${gtest_SOURCE_DIR}/include
-	PRIVATE ${gmock_SOURCE_DIR}/include
+	PRIVATE ${gtest_INCLUDE_DIRS}
 	PRIVATE ${OpenCL_INCLUDE_DIRS})
 
 if(WIN32)
