--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -14,7 +14,7 @@ ADD_LIBRARY(Nraster SHARED
 	src/utils/converters.cpp)
 
 TARGET_LINK_LIBRARIES(Nraster
-	PRIVATE OpenCL::OpenCL)
+	PUBLIC ${OpenCL_LIBRARIES})
 
 TARGET_INCLUDE_DIRECTORIES(Nraster
 	PRIVATE ${OpenCL_INCLUDE_DIRS}
