--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,8 +7,7 @@ ADD_EXECUTABLE(NrasterTest
 TARGET_LINK_LIBRARIES(NrasterTest 
 	PRIVATE Nraster
 	PRIVATE gtest 
-	PRIVATE gmock
-	PRIVATE OpenCL)
+	PRIVATE gmock)
 
 TARGET_INCLUDE_DIRECTORIES(NrasterTest 
 	PRIVATE .
