--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,12 @@ ENDIF(WIN32)
 
 IF(BUILD_DEMOS)
 	SET(BUILD_glew ON)
+
 	SET(BUILD_glfw ON)
+	SET(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+	SET(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+	SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+
 	SET(FIND_OpenGL ON)
 ENDIF()
 
