removed pch from non MSVC builds

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -20,7 +20,9 @@ ADD_LIBRARY(Nraster SHARED
 	
 	pch.cpp)
 
-ADD_PRECOMPILED_HEADER(Nraster pch.h SOURCE_CXX pch.cpp FORCEINCLUDE)
+IF(MSVC)
+	ADD_PRECOMPILED_HEADER(Nraster pch.h SOURCE_CXX pch.cpp FORCEINCLUDE)
+ENDIF()
 
 TARGET_LINK_LIBRARIES(Nraster
 	PUBLIC ${OpenCL_LIBRARIES})
