--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -3,7 +3,6 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 INCLUDE_DIRECTORIES(
 	PUBLIC inc
 	PUBLIC ${NRASTER_ALL_INCLUDES}
-	PUBLIC ${OpenCL_INCLUDE_DIRS}
 	PUBLIC ${OpenGL_INCLUDE_DIRS}
 	PUBLIC ${glew_INCLUDE_DIRS}
 	PUBLIC ${glfw_INCLUDE_DIRS})
@@ -12,8 +11,7 @@ ADD_LIBRARY(NrasterDemoUtils src/utils.cpp src/linalg.cpp)
 
 TARGET_LINK_LIBRARIES(NrasterDemoUtils 
 	PUBLIC Nraster
-	PUBLIC OpenCL
-	PUBLIC OpenGL
+	PUBLIC opengl32
 	PUBLIC glfw
 	PUBLIC glew)
 
@@ -23,11 +21,10 @@ TARGET_LINK_LIBRARIES(Triangle3d NrasterDemoUtils)
 ADD_EXECUTABLE(Cube4d src/cube4d.cpp)
 TARGET_LINK_LIBRARIES(Cube4d NrasterDemoUtils)
 
-
 if(WIN32)
     # Copy DLL files to output directory
-    add_custom_command(TARGET Triangle3d POST_BUILD
+	ADD_CUSTOM_COMMAND(TARGET Triangle3d PRE_LINK
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
-    "${PROJECT_BINARY_DIR}/lib/Nraster.dll"             
+    "${PROJECT_BINARY_DIR}/lib/Nraster.dll"         
     $<TARGET_FILE_DIR:Triangle3d>)
 endif()
