--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -25,5 +25,5 @@ TARGET_LINK_LIBRARIES(Nraster
 	PUBLIC ${OpenCL_LIBRARIES})
 
 TARGET_INCLUDE_DIRECTORIES(Nraster
-	PRIVATE ${OpenCL_INCLUDE_DIRS}
-	PRIVATE inc)
+	PUBLIC ${OpenCL_INCLUDE_DIRS}
+	PUBLIC inc)
